RESOLVED FIXED162807
Fix modules tests after r206653 handle breakpoint locations in import/export statements
https://bugs.webkit.org/show_bug.cgi?id=162807
Summary Fix modules tests after r206653 handle breakpoint locations in import/export ...
Joseph Pecoraro
Reported 2016-09-30 14:00:51 PDT
Summary: Fix modules tests after r206653 handle breakpoint locations in import/export statements Steps to Reproduce: 1. $ run-jsc-stress-tests --release JSTests/modules.yaml => Failures Notes: - RELEASE_ASSERT that contents of import/export statement need debug hooks - Only affects modules
Attachments
[PATCH] Proposed Fix (3.14 KB, patch)
2016-09-30 14:02 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-09-30 14:02:36 PDT
Created attachment 290380 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 2 2016-09-30 14:25:01 PDT
Comment on attachment 290380 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=290380&action=review > Source/JavaScriptCore/parser/ASTBuilder.h:756 > + // The export statement itself will get the breakpoint location, don't record another for the declaration statement. > + declaration->setNeedsDebugHook(); Mark reviewed this in person. He recommended clarifying this comment.
Joseph Pecoraro
Comment 3 2016-09-30 14:28:17 PDT
Note You need to log in before you can comment on or make changes to this bug.