Fix modules tests after r206653 handle breakpoint locations in import/export statements https://bugs.webkit.org/show_bug.cgi?id=162807

Reviewed by Mark Lam.

* parser/ASTBuilder.h:
(JSC::ASTBuilder::createExportDefaultDeclaration):
(JSC::ASTBuilder::createExportLocalDeclaration):
Don't record an extra breakpoint location for the statement
within an export statement.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseModuleSourceElements):
Record a pause location for import/export statements.

Canonical link: https://commits.webkit.org/180745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206671 268f45cc-cd09-0410-ab3c-d52691b4dbfc